Bug 342075 - Crash on adding new foreign key constraint
Summary: Crash on adding new foreign key constraint
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.0 (KDE Applications 4.14.0)
Platform: Other Other
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
: 344607 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-21 14:06 UTC by Ralf Habacker
Modified: 2015-02-26 21:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.1 (KDE 14.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-12-21 14:06:56 UTC
Adding a new foreign key constraint on an entity let umbrello crash.

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add a new entity relation diagram
3. add a new entity
4. right click on the entity and select new->foreign key constraint

Actual Results:  
umbrello crash

Expected Results:  
umbrello do not crash and should add the foreign key constraint
Comment 1 Ralf Habacker 2014-12-21 14:26:44 UTC
Git commit 23de649984a6bfa9017f80a9466958bf5f70d9cf by Ralf Habacker.
Committed on 21/12/2014 at 14:02.
Pushed by habacker into branch 'Applications/14.12'.

Fix crash adding new uml foreign key constraint.
FIXED-IN:2.15.1 (KDE 14.12.1)

M  +1    -1    umbrello/dialogs/dialogbase.cpp

http://commits.kde.org/umbrello/23de649984a6bfa9017f80a9466958bf5f70d9cf
Comment 2 Ralf Habacker 2015-02-26 21:04:08 UTC
*** Bug 344607 has been marked as a duplicate of this bug. ***