Fix crash adding new uml foreign key constraint.

BUG:342075
FIXED-IN:2.15.1 (KDE 14.12.1)